<?xml version="3.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/hello_gloria"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/horizon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            tools:ignore="UselessParent">
            <!--  <TextView
                  android:id="@+id/text"
                  android:layout_width="250dp"
                  android:layout_height="wrap_content"
                  android:text="@string/hey_gloria"
                  android:textSize="20sp"
                  android:textColor="@color/colorPrimaryDark"
                  android:textStyle="bold" />-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="90dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/saloon_car"
                    android:src="@drawable/car" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/full_time_4_4_hillux"
                    android:src="@drawable/car2" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/sports_range"
                    android:src="@drawable/car3" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/porsche_car_luxury_life"
                    android:src="@drawable/car4" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/toyota_prado"
                    android:src="@drawable/car5" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fortuner_car"
                    android:src="@drawable/car6" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/allion_car"
                    android:src="@drawable/car7" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/toyota_voxy"
                    android:src="@drawable/car8" />
            </LinearLayout>

        </HorizontalScrollView>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/horizon"
        android:layout_marginTop="30dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/car"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/saloon_car"
                android:src="@drawable/car" />

            <ImageView
                android:id="@+id/car2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/this_is_an_all_road_car"
                android:src="@drawable/car2" />

            <ImageView
                android:id="@+id/car3"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/sports_range"
                android:src="@drawable/car3" />

            <ImageView
                android:id="@+id/car4"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/porsche_car_luxury_life"
                android:src="@drawable/car4" />

            <ImageView
                android:id="@+id/car5"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/toyota_prado"
                android:src="@drawable/car5" />

            <ImageView
                android:id="@+id/car6"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/fortuner_car"
                android:src="@drawable/car6" />

            <ImageView
                android:id="@+id/car7"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/allion_car"
                android:src="@drawable/car7" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!-- android:layout_alignBottom="@+id/car7"
                 android:layout_alignTop="@+id/car8"
                 android:layout_toRightOf="@+id/car7"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_alignParentRight="true"-->

            <ImageView
                android:id="@+id/car8"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/toyota_voxy"
                android:src="@drawable/car8" />

            <!--   <TextView
                   android:id="@+id/car_car8"
                   android:layout_width="250dp"
                   android:layout_height="wrap_content"
                   android:text="@string/for_super_cars"
                   android:textColor="@color/colorPrimaryDark"
                   android:textStyle="italic"

                   />-->

        </LinearLayout>

    </ScrollView>


</RelativeLayout>