<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/car_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/car_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:background="@color/light"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/car_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/car_image"
                android:layout_marginTop="4dp"
                android:padding="10dp"
                android:text="@string/vehicle_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#ffff00"
                android:theme="@style/ThemeOverlay.AppCompat.Light" />

            <TextView
                android:id="@+id/car_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/car_title"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_speed"
                android:padding="10dp"
                android:text="@string/acceleration_time_is_60_100km_hr"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="?android:textColorSecondary"
                android:theme="@style/ThemeOverlay.AppCompat.Light" />
            <!--Add an Horizontal line-->
            <view
                android:id="@+id/car_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/car_speed"
                android:background="@color/light" />

            <TextView
                android:id="@+id/car_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/car_divider"
                android:layout_marginTop="3dp"
                android:padding="8dp"
                android:text="@string/vehicle_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/dark"
                android:textStyle="italic"
                android:theme="@style/ThemeOverlay.AppCompat.Light" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/car_cardView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_want_speed"
            android:textColor="@color/dark"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>
